12factor/message-app-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: message-app
  labels:
    app: message
spec:
  clusterIP: 10.152.183.55
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: message
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-app
  labels:
    app: message
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
      - name: message-app
        image: commandemy/message-app:v0.1
        ports:
        - containerPort: 8080
