12factor/message-app-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-app
  labels:
    name: message-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: message-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: message-app
spec:
  serviceName: "message-app"
  replicas: 1
  selector:
    matchLabels:
      name: message-app
  template:
    metadata:
      labels:
        name: message-app
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: message-app
        image: <YOUR-DOCKER-USERNAME>/message-app:v0.3
        command: ["node", "app.js"]
        ports:
        - containerPort: 80
